<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.basestar</groupId>
    <artifactId>basestar</artifactId>
    <packaging>pom</packaging>
    <version>1.3.1-SNAPSHOT</version>

    <inceptionYear>2019</inceptionYear>
    <organization>
        <name>Basestar.IO</name>
        <url>https://github.com/basestar</url>
    </organization>

    <name>Basestar</name>
    <url>https://github.com/basestar/basestar</url>
    <description>A declarative data-access framework</description>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
            <comments>A business-friendly OSS license</comments>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>arcneon</id>
            <name>Matthew Evans</name>
            <email>basestar@arcneon.com</email>
            <url>https://github.com/arcneon</url>
            <roles>
                <role>architect</role>
                <role>developer</role>
            </roles>
            <timezone>Europe/London</timezone>
        </developer>
    </developers>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <lombok.version>1.18.22</lombok.version>
        <log4j.version>2.17.0</log4j.version>
        <junit.version>5.7.0</junit.version>
        <skipDocs>false</skipDocs>
        <skipCoverage>false</skipCoverage>
        <sonar.projectKey>basestar</sonar.projectKey>
        <sonar.moduleKey>
            ${project.groupId}:${project.artifactId}
        </sonar.moduleKey>
        <sonar.organization>basestar</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <sonar.scanner.force-deprecated-java-version>true</sonar.scanner.force-deprecated-java-version>
        <surefire.test.argLine.extra>
            <!-- certain profiles will want to add command-line arguments to the JRE -->
        </surefire.test.argLine.extra>
    </properties>

    <scm>
        <connection>scm:git:git://github.com/basestar/basestar.git</connection>
        <developerConnection>scm:git:git@github.com:basestar/basestar.git</developerConnection>
        <url>https://github.com/basestar/basestar</url>
        <tag>v1.1.6</tag>
    </scm>

    <modules>
        <module>basestar-api</module>
        <module>basestar-auth</module>
        <module>basestar-auth-cognito</module>
        <module>basestar-auth-nimbus</module>
        <module>basestar-avro</module>
        <module>basestar-bom</module>
        <module>basestar-connector-dynamodb</module>
        <module>basestar-connector-sqs</module>
        <module>basestar-connector-undertow</module>
        <module>basestar-core</module>
        <module>basestar-database</module>
        <module>basestar-database-client</module>
        <module>basestar-database-server</module>
        <module>basestar-event</module>
        <module>basestar-event-sns</module>
        <module>basestar-event-sqs</module>
        <module>basestar-expression</module>
        <module>basestar-jackson</module>
        <module>basestar-mapper</module>
        <module>basestar-schema</module>
        <module>basestar-spark</module>
        <module>basestar-spark-aws</module>
        <module>basestar-storage</module>
        <module>basestar-storage-dynamodb</module>
        <module>basestar-storage-elasticsearch</module>
        <module>basestar-storage-s3</module>
        <module>basestar-storage-sql</module>
        <module>basestar-storage-cognito</module>
        <module>basestar-storage-hazelcast</module>
        <module>basestar-test</module>
        <module>basestar-graphql</module>
        <module>basestar-spark-elasticsearch</module>
        <module>basestar-stream</module>
        <module>basestar-maven-plugin</module>
        <module>basestar-storage-leveldb</module>
        <module>basestar-storage-aws</module>
        <module>basestar-stream-hazelcast</module>
    </modules>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.20.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

<!--    <reporting>-->
<!--        <plugins>-->
<!--            <plugin>-->
<!--                <groupId>org.apache.maven.plugins</groupId>-->
<!--                <artifactId>maven-javadoc-plugin</artifactId>-->
<!--                <version>3.2.0</version>-->
<!--                <configuration>-->
<!--                    <failOnError>false</failOnError>-->
<!--                    <sourcepath>${project.build.directory}/delombok</sourcepath>-->
<!--                </configuration>-->
<!--            </plugin>-->
<!--        </plugins>-->
<!--    </reporting>-->

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>8</source>
                    <target>8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok-maven-plugin</artifactId>
                <version>1.18.20.0</version>
                <executions>
                    <execution>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>delombok</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <addOutputDirectory>false</addOutputDirectory>
                    <sourceDirectory>src/main/java</sourceDirectory>
                    <encoding>UTF-8</encoding>
                    <outputDirectory>${project.build.directory}/delombok</outputDirectory>
                    <skip>${skipDocs}</skip>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.0.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.3.1</version>
                <configuration>
                    <failOnError>false</failOnError>
                    <sourcepath>${project.build.directory}/delombok</sourcepath>
                    <skip>${skipDocs}</skip>
                </configuration>
                <executions>
                    <execution>
                        <id>ftl-docs</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>javadoc</goal>
                        </goals>
                        <configuration>
                            <doclet>br.com.diogoko.doclet.FreeMarkerDoclet</doclet>
                            <additionalOptions>-o "${project.basedir}/README.md" -ft "${project.basedir}/src/doc/README.md.ftl"</additionalOptions>
                            <useStandardDocletOptions>false</useStandardDocletOptions>
                            <docletArtifact>
                                <groupId>io.basestar</groupId>
                                <artifactId>freemarker-doclet</artifactId>
                                <version>1.5.0</version>
                            </docletArtifact>
                        </configuration>
                    </execution>
                    <execution>
                        <id>attach-javadocs</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>javadoc</goal>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <doclet>ch.raffael.mddoclet.MarkdownDoclet</doclet>
                            <docletArtifact>
                                <groupId>ch.raffael.markdown-doclet</groupId>
                                <artifactId>markdown-doclet</artifactId>
                                <version>1.4</version>
                            </docletArtifact>
                            <useStandardDocletOptions>true</useStandardDocletOptions>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <parallel>all</parallel>
                    <argLine>@{argLine} @{surefire.test.argLine.extra}</argLine>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.junit.jupiter</groupId>
                        <artifactId>junit-jupiter-engine</artifactId>
                        <version>${junit.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.10.0</version>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>1.20</version>
                <configuration>
                    <verbose>false</verbose>
                    <addSvnKeyWords>false</addSvnKeyWords>
                    <licenseName>apache_v2</licenseName>
                    <canUpdateCopyright>true</canUpdateCopyright>
                    <canUpdateDescription>true</canUpdateDescription>
                    <canUpdateLicense>true</canUpdateLicense>
                    <includes>
                        <include>**/*.java</include>
                    </includes>
                    <roots>
                        <root>src/main/java</root>
                        <root>src/test/java</root>
                    </roots>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.7</version>
                <configuration>
                    <skip>${skipCoverage}</skip>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <!-- attached to Maven test phase -->
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.7</version>
                <configuration>
                    <excludes>
                    </excludes>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>

            <id>ossrh</id>
            <distributionManagement>
                <snapshotRepository>
                    <id>ossrh</id>
                    <url>https://oss.sonatype.org/content/repositories/snapshots</url>
                </snapshotRepository>
                <repository>
                    <id>ossrh</id>
                    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
                </repository>
            </distributionManagement>

            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.6</version>
                        <configuration>
                            <skip>true</skip>
                            <gpgArguments>
                                <arg>--pinentry-mode</arg>
                                <arg>loopback</arg>
                            </gpgArguments>
                        </configuration>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>deploy</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <artifactId>maven-deploy-plugin</artifactId>
                        <version>2.8.2</version>
                        <executions>
                            <execution>
                                <id>default-deploy</id>
                                <phase>deploy</phase>
                                <goals>
                                    <goal>deploy</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.sonatype.plugins</groupId>
                        <artifactId>nexus-staging-maven-plugin</artifactId>
                        <version>1.6.7</version>
                        <extensions>true</extensions>
                        <configuration>
                            <serverId>ossrh</serverId>
                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-release-plugin</artifactId>
                        <version>3.0.0-M1</version>
                        <configuration>
                            <autoVersionSubmodules>true</autoVersionSubmodules>
                            <tagNameFormat>v@{project.version}</tagNameFormat>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <id>jdk9plus</id>
            <activation>
                <jdk>[9,)</jdk>
            </activation>
            <properties>
                <spark.version>3.2.1</spark.version>
                <!-- this is required for now to let Spark tests run -->
                <surefire.test.argLine.extra>
                    <!-- this has to happen on JDK9+: -->
                    <!-- for both Spark and Hazelcast: -->
                    --add-opens java.base/java.lang=ALL-UNNAMED
                    --add-opens java.base/java.nio=ALL-UNNAMED
                    --add-opens java.base/sun.nio.ch=ALL-UNNAMED
                    --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
                    <!-- at least for Spark: -->
                    --add-opens java.base/sun.util.calendar=ALL-UNNAMED
                    --add-opens java.base/java.net=ALL-UNNAMED
                    <!-- as requested by Hazelcast: -->
                    --add-modules java.se
                    --add-opens java.management/sun.management=ALL-UNNAMED
                    --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED
                </surefire.test.argLine.extra>
            </properties>
        </profile>

    </profiles>


</project>
